Bug 59517 - FILEOPEN: Lost all text in particular file (regression)
Summary: FILEOPEN: Lost all text in particular file (regression)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: All All
: medium critical
Assignee: Michael Stahl
URL:
Whiteboard: BSA odf target:4.1.0 target:4.0.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-17 15:46 UTC by webofht-libreofficebugs002
Modified: 2013-01-21 13:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description webofht-libreofficebugs002 2013-01-17 15:46:22 UTC
Problem description: In a particular file, no text is shown in LibreOffice 4.0.0.1. The text can be shown in LibreOffice 3.6.4.3.

Steps to reproduce:

1. The operating system used is Linux debian 2.6.32-5-686 #1 SMP Sun Sep 23 09:49:36 UTC 2012 i686 GNU/Linux.

2. The version of LibreOffice used is LibreOffice 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799) (LO4.0.0.1)

3. The particular file is here:

http://www.calnewman.org/Parish_Council_April_2011_Minutes.odt

4. File -> Open -> (particular file)

5. No text is shown in LO4.0.0.1. Just a blank page is displayed.

6. In LibreOffice 3.6.4.3 (Build ID: 2ef5aff), some text is shown.

Current behavior: All text is lost in LO4.0.0.1.

Expected behavior: The text should be displayed in LO4.0.0.1.

              
Operating System: Debian
Version: 4.0.0.1 rc
Last worked in: 3.6.4.3 release
Comment 1 Thomas van der Meulen [retired] 2013-01-17 16:30:45 UTC
i can conform this bug running Libreoffice 4.0.0.1 rc on mac os x 10.6.8
on 3.6.4.3  is works fine
Comment 2 Gerry 2013-01-17 23:33:02 UTC
I can confirm this, too. Worked in 3.6.x. There was no text in Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)

I increased the importance level to critical, because of data loss. Additionally when saving the file in 4.0rc, then the text is also lost in 3.6.x
Comment 3 Michael Stahl 2013-01-18 16:20:51 UTC
very odd... was apparently introduced in AL2 rebase of xmloff...
hmm... digging through 50k lines patch to find out
the actual changes that cause the failure is not fun.

apparently it's somewhere in here:

git show 17ff7b41d15ab9928e2e2706faa26234a09802cd xmloff/inc/xmloff/xmlimp.hxx  xmloff/source/core/xmlimp.cxx  xmloff/source/draw/ximpshap.cxx  xmloff/source/meta/xmlmetai.cxx
Comment 4 Michael Stahl 2013-01-18 16:39:23 UTC
lol! that document was written by "NeoOffice/2.2$Unix OpenOffice.org_project/"
which has evidently inherited the ridiculous bug from OOo 2.x
of storing the "text:display" attribute with inverted value
and thereby hiding all text.

regression is that we don't recognize that generator any more
so the "special fixup handling" isn't run.
Comment 5 Not Assigned 2013-01-18 22:53:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0669d78ea76ab9bfeff27ea02d785973f3720d6b

fdo#59517: fix detection of ancient OOo ODF generator strings:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2013-01-18 22:56:50 UTC
fixed on master
Comment 7 Not Assigned 2013-01-21 13:39:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca4aa39e66ea728f5d6b004ddd678e076d1ffa60&h=libreoffice-4-0

fdo#59517: fix detection of ancient OOo ODF generator strings:


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.