fdo#59517: fix detection of ancient OOo ODF generator strings:

SvXMLMetaDocumentContext::setBuildId: check only the prefix of the
generator string, not all of it.

(regression from 17ff7b41d15ab9928e2e2706faa26234a09802cd)

Change-Id: I0cdd958d67cd13fd2368cc6958893ce3528a9e94
(cherry picked from commit 0669d78ea76ab9bfeff27ea02d785973f3720d6b)
Reviewed-on: https://gerrit.libreoffice.org/1760
Reviewed-by: Tor Lillqvist <tml@iki.fi>
Tested-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>
Reviewed-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>